Внести правки в соотвествие с ревью №3 #2